site/en/api_docs/python/tf/compat/v1/case.md
description: Create a case operation.

<div itemscope itemtype="http://developers.google.com/ReferenceObject">
<meta itemprop="name" content="tf.compat.v1.case" />
<meta itemprop="path" content="Stable" />
</div>

# tf.compat.v1.case

<!-- Insert buttons and diff -->

<table class="tfo-notebook-buttons tfo-api nocontent" align="left">
<td>
  <a target="_blank" href="https://github.com/tensorflow/tensorflow/blob/r2.4/tensorflow/python/ops/control_flow_ops.py#L3434-L3540">
    <img src="https://www.tensorflow.org/images/GitHub-Mark-32px.png" />
    View source on GitHub
  </a>
</td>
</table>



Create a case operation.

<pre class="devsite-click-to-copy prettyprint lang-py tfo-signature-link">
<code>tf.compat.v1.case(
    pred_fn_pairs, default=None, exclusive=(False), strict=(False), name='case'
)
</code></pre>



<!-- Placeholder for "Used in" -->

See also <a href="../../../tf/switch_case.md"><code>tf.switch_case</code></a>.

The `pred_fn_pairs` parameter is a dict or list of pairs of size N.
Each pair contains a boolean scalar tensor and a python callable that
creates the tensors to be returned if the boolean evaluates to True.
`default` is a callable generating a list of tensors. All the callables
in `pred_fn_pairs` as well as `default` (if provided) should return the same
number and types of tensors.

If `exclusive==True`, all predicates are evaluated, and an exception is
thrown if more than one of the predicates evaluates to `True`.
If `exclusive==False`, execution stops at the first predicate which
evaluates to True, and the tensors generated by the corresponding function
are returned immediately. If none of the predicates evaluate to True, this
operation returns the tensors generated by `default`.

<a href="../../../tf/case.md"><code>tf.case</code></a> supports nested structures as implemented in
`tf.contrib.framework.nest`. All of the callables must return the same
(possibly nested) value structure of lists, tuples, and/or named tuples.
Singleton lists and tuples form the only exceptions to this: when returned by
a callable, they are implicitly unpacked to single values. This
behavior is disabled by passing `strict=True`.

If an unordered dictionary is used for `pred_fn_pairs`, the order of the
conditional tests is not guaranteed. However, the order is guaranteed to be
deterministic, so that variables created in conditional branches are created
in fixed order across runs.




**Example 1:**

#### Pseudocode:



```
if (x < y) return 17;
else return 23;
```

#### Expressions:



```python
f1 = lambda: tf.constant(17)
f2 = lambda: tf.constant(23)
r = tf.case([(tf.less(x, y), f1)], default=f2)
```

**Example 2:**

#### Pseudocode:



```
if (x < y && x > z) raise OpError("Only one predicate may evaluate to True");
if (x < y) return 17;
else if (x > z) return 23;
else return -1;
```

#### Expressions:



```python
def f1(): return tf.constant(17)
def f2(): return tf.constant(23)
def f3(): return tf.constant(-1)
r = tf.case({tf.less(x, y): f1, tf.greater(x, z): f2},
         default=f3, exclusive=True)
```

<!-- Tabular view -->
 <table class="responsive fixed orange">
<colgroup><col width="214px"><col></colgroup>
<tr><th colspan="2"><h2 class="add-link">Args</h2></th></tr>

<tr>
<td>
`pred_fn_pairs`
</td>
<td>
Dict or list of pairs of a boolean scalar tensor and a
callable which returns a list of tensors.
</td>
</tr><tr>
<td>
`default`
</td>
<td>
Optional callable that returns a list of tensors.
</td>
</tr><tr>
<td>
`exclusive`
</td>
<td>
True iff at most one predicate is allowed to evaluate to `True`.
</td>
</tr><tr>
<td>
`strict`
</td>
<td>
A boolean that enables/disables 'strict' mode; see above.
</td>
</tr><tr>
<td>
`name`
</td>
<td>
A name for this operation (optional).
</td>
</tr>
</table>



<!-- Tabular view -->
 <table class="responsive fixed orange">
<colgroup><col width="214px"><col></colgroup>
<tr><th colspan="2"><h2 class="add-link">Returns</h2></th></tr>
<tr class="alt">
<td colspan="2">
The tensors returned by the first pair whose predicate evaluated to True, or
those returned by `default` if none does.
</td>
</tr>

</table>



<!-- Tabular view -->
 <table class="responsive fixed orange">
<colgroup><col width="214px"><col></colgroup>
<tr><th colspan="2"><h2 class="add-link">Raises</h2></th></tr>

<tr>
<td>
`TypeError`
</td>
<td>
If `pred_fn_pairs` is not a list/dictionary.
</td>
</tr><tr>
<td>
`TypeError`
</td>
<td>
If `pred_fn_pairs` is a list but does not contain 2-tuples.
</td>
</tr><tr>
<td>
`TypeError`
</td>
<td>
If `fns[i]` is not callable for any i, or `default` is not
callable.
</td>
</tr>
</table>



#### Eager Compatibility
Unordered dictionaries are not supported in eager mode when `exclusive=False`.
Use a list of tuples instead.

